{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "ad17083d-5d05-4867-b67d-55ad00c2eb36",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c2d5ade9-0814-4296-8078-1dd50c4360c7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpPress",
                    "type": "Button",
                    "id": "161e3756-318e-44ae-aac7-1b6dfd710312",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpRelease",
                    "type": "Button",
                    "id": "f8af46aa-74ec-4a19-981b-6e2859dc0bd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "move",
                    "id": "700d219e-2d69-4c4f-97ea-34789235bb2f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9554db8d-de5f-4620-b05c-eaa0a13d4660",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c5f50da9-ba58-4757-a78a-6d8d34111b93",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "29b9d824-6f52-4b16-9c50-c439f7db276f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b2baa218-7665-487b-a4b2-880d50bf647d",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "82e8fde4-e9c6-4c9b-aeda-2dcc6bf6e0a3",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9922f84b-fa30-481a-960e-c7a5880664b7",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "JumpPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39837974-7ee8-4d23-b149-95c86503b1ff",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "gamepad",
                    "action": "JumpPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed96ec8f-7cee-4116-9d3c-f9a9861c63fd",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "keyboard",
                    "action": "JumpRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa168c75-f360-49bf-b45c-9cb545edb3b2",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "gamepad",
                    "action": "JumpRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "keyboard",
            "bindingGroup": "keyboard",
            "devices": []
        },
        {
            "name": "gamepad",
            "bindingGroup": "gamepad",
            "devices": []
        }
    ]
}